# a-cmake-library

./: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
cmake/: BinaryConfig.cmake  BinaryFunctions.cmake  BinaryLibraryFunctions.cmake  CodeCoverage.cmake  CodeCoverageCustomTarget.cmake  LibraryBuild.cmake  LibraryConfig.cmake  LibraryHeaderOnly.cmake  LibraryNormal.cmake
samples/: CMakeLists.txt
samples/tests/: CMakeLists.txt
